# enviroment

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
enviroment/: AGENTS.md
environment-kit/: .gitignore  AGENTS.md  README.md
starter/: .gitignore  AGENTS.md  (+2 more)
starter-kit/: AGENTS.md  CLAUDE.md  README.md
starter-kit/starters/rust/api-axum/: .gitignore  Cargo.toml
starter-kit/starters/rust/api-axum/docker/: Dockerfile
starter-kit/starters/rust/api-axum/src/: lib.rs  main.rs
starter-kit/starters/rust/api-axum/src/handler/: hello_world.rs
starter-kit/starters/rust/api-axum/src/middleware/: error_handler.rs
starter-kit/starters/rust/api-axum/src/models/: hello_world.rs  mod.rs
starter-kit/starters/rust/api-axum/src/services/: hello_world_service.rs
starter/starters/rust/batch/: Cargo.toml  README.md
starter/starters/rust/batch/docs/03-実装/: README.md
starter/starters/rust/batch/docs/06-リファレンス/: 01-実装状況.md
starter/starters/rust/batch/env/: config.yaml
starter/starters/rust/batch/src/: lib.rs
starter/starters/rust/batch/src/application/: mod.rs
starter/starters/rust/batch/src/application/jobs/: mod.rs
starter/starters/rust/batch/src/domain/: mod.rs
starter/starters/rust/batch/src/domain/repositories/: mod.rs
starter/starters/rust/batch/src/infrastructure/config/: mod.rs
starter/starters/rust/batch/src/infrastructure/database/: client.rs  mod.rs
starter/starters/rust/batch/src/infrastructure/repositories/: item_sqlite.rs  mod.rs
starter/starters/rust/batch/src/interfaces/: config.rs
starter/starters/rust/batch/src/registry/: mod.rs
starter/starters/rust/batch/src/shared/: constants.rs
(+874 files in other folders)
