[package]
name = "batch"
version = "0.1.0"
edition = "2021"
description = "Workflow runner for batch job execution"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
regex-lite = "0.1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "batch"
path = "src/main.rs"
